--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ flake8 = "^5.0.4"
 isort = "^5.10.1"
 pytest = "^7.1.2"
 
+[tool.poetry.scripts]
+refurb = "refurb.__main__:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
