--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "refurb"
-version = "0.1.0"
-description = "A tool to refurbish and modernize your Python codebase"
+version = "0.2.0"
+description = "A tool for refurbish and modernize Python codebases"
 authors = ["dosisod"]
 license = "GPL-3.0-only"
 
