Get test coverage to 100%

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         run: make isort
 
       - name: Run unit tests
-        run: make test-unit
+        run: make test
 
       - name: Run e2e tests
         run: make test-e2e
