Use `utf8` locale when reading files (#43)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install locales
+        run: |
+          sudo locale-gen zh_CN.GBK
+          sudo update-locale
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
