Register Refurb as a Flake8 plugin
The plugin is disabled by default and thus requires running flake8 with
--enable-extensions FRB

FRB is chosen as error code as it is similar to existing FURB code but
Flake8 has a max prefix length of 3.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ pytest = "^7.1.2"
 [tool.poetry.scripts]
 refurb = "refurb.__main__:main"
 
+[tool.poetry.plugins."flake8.extension"]
+FRB = "refurb.flake8:Flake8Refurb"
+
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
