--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ disallow_any_decorated = true
 disallow_any_explicit = true
 disallow_any_unimported = true
 warn_unreachable = true
+allow_redefinition = true
 
 [[tool.mypy.overrides]]
 module = "test.*"
