--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -11,6 +11,15 @@ body:
     attributes:
       value: Thank you for submitting a bug report for Refurb! Please fill out the information below so we can fix your issue as quickly as possible!
 
+  - type: checkboxes
+    id: tested-master
+    attributes:
+      label: Has your issue already been fixed?
+      description: It is possible that your issue has already been fixed on `master`, but not released to PyPi. There could also already be an open issue for problem.
+      options:
+        - label: Have you checked to see if your issue still exists on the `master` branch? See [the docs](https://github.com/dosisod/refurb#developing) for instructions on how to setup a local build of Refurb.
+        - label: Have you looked at the open/closed issues to see if anyone has already reported your issue?
+
   - type: textarea
     id: describe
     attributes:
