Add output format for GitHub Annotations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Pip install
         run: make install
 
+      - name: Temp
+        run: refurb --format github temp.py
+
       - name: Run ruff
         run: make ruff
 
