Autogenerate documentation for checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,7 @@ jobs:
 
       - name: Run e2e tests
         run: make test-e2e
+
+        # TODO: fail if docs are out of date
+      - name: Build docs
+        run: make docs
