--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,10 @@ omit = [
 ]
 
 [tool.coverage.report]
+exclude_lines = [
+  "pragma: no cover",
+  "if TYPE_CHECKING:",
+]
 skip_covered = true
 skip_empty = true
 
@@ -71,19 +75,39 @@ testpaths = ["test"]
 [tool.ruff]
 line-length = 79
 
-extend-select = [
-  "W", "N", "UP", "YTT", "S", "BLE", "B",
-  "C4", "DTZ", "ISC", "PIE", "PT", "RET",
-  "SIM", "PTH", "PLE", "RUF", "FBT",
-]
+select = ["ALL"]
 
 # TODO: fix RUF100 not playing well with refurb
-extend-ignore = ["S101", "N813", "N818", "SIM102", "PT012", "RUF100", "F821", "B905", "FBT001"]
+extend-ignore = [
+  "A001", "A002", "A003",
+  "ANN101", "ANN102", "ANN401", "ARG001",
+  "B905",
+  "C901",
+  "COM812",
+  "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D202", "D203",
+  "D205", "D212", "D214", "D400", "D401", "D404", "D405", "D406", "D407", "D412",
+  "D415", "D416",
+  "EM101", "EM102",
+  "F821",
+  "FBT001",
+  "I001",
+  "INP001",
+  "N813", "N818",
+  "PGH003",
+  "PLR0911", "PLR0912", "PLR2004",
+  "PT012",
+  "RUF100",
+  "S101",
+  "SIM102",
+  "SLF001",
+  "T201",
+  "TRY003", "TRY004",
+]
 
 extend-exclude = ["test/data*"]
 
 [tool.ruff.per-file-ignores]
-"test/*" = ["E501"]
+"test/*" = ["ANN201", "ARG001", "E501", "TCH001", "TCH002"]
 "refurb/main.py" = ["E501"]
 
 [build-system]
