Improve arg parsing:
* Disallow empty strings
* Disallow flags/files before/after help and version flags
* Dont treat "gen" as a sub command if flags/files are passed after it

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ extend-ignore = [
   "INP001",
   "N813", "N818",
   "PGH003",
-  "PLR0911", "PLR0912", "PLR2004",
+  "PLR0911", "PLR0912", "PLR0915", "PLR2004",
   "PT012",
   "RUF100",
   "S101",
