--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ omit = [
 exclude_lines = [
   "pragma: no cover",
   "if TYPE_CHECKING:",
+  "assert False",
 ]
 skip_covered = true
 skip_empty = true
@@ -120,6 +121,7 @@ target-version = "py310"
 
 [tool.ruff.per-file-ignores]
 "test/*" = ["ANN201", "ARG001", "E501", "TCH001", "TCH002"]
+"refurb/*" = ["PT"]
 "refurb/main.py" = ["E501"]
 "refurb/visitor/traverser.py" = ["ALL"]
 "test/e2e/gbk.py" = ["FURB105"]
