--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ lint.extend-ignore = [
   "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D202", "D203",
   "D205", "D212", "D214", "D400", "D401", "D404", "D405", "D406", "D407", "D412",
   "D413", "D415", "D416",
+  "DOC201", "DOC402", "DOC501",
   "EM101", "EM102",
   "F821",
   "FBT001",
